Importing trunk INDI

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,90 @@
 * text=auto !eol
+indi/.cproject -text
+indi/.project -text
+indi/AUTHORS -text
+indi/ChangeLog -text
+indi/Doxyfile -text
+indi/INSTALL -text
+indi/LICENSE -text
+indi/NEWS -text
+indi/README -text
+indi/TODO -text
+indi/cmake_modules/FindCFitsio.cmake -text
+indi/cmake_modules/FindFLI.cmake -text
+indi/cmake_modules/FindNova.cmake -text
+indi/cmake_modules/FindUSB.cmake -text
+indi/cmake_modules/MacroBoolTo01.cmake -text
+indi/cmake_modules/MacroLogFeature.cmake -text
+indi/cmake_modules/MacroOptionalFindPackage.cmake -text
+indi/drivers/ccd/fli_ccd.c -text
+indi/drivers/filter_wheel/fli_wheel.c -text
+indi/drivers/filter_wheel/trutech_wheel.c -text
+indi/drivers/focuser/fli_pdf.c -text
+indi/drivers/focuser/robofocus.c -text
+indi/drivers/focuser/robofocusdriver.c -text
+indi/drivers/focuser/robofocusdriver.h -text
+indi/drivers/telescope/celestrongps.cpp -text
+indi/drivers/telescope/celestrongps.h -text
+indi/drivers/telescope/celestronprotocol.c -text
+indi/drivers/telescope/celestronprotocol.h -text
+indi/drivers/telescope/intelliscope.c -text
+indi/drivers/telescope/lx200_16.cpp -text
+indi/drivers/telescope/lx200_16.h -text
+indi/drivers/telescope/lx200ap.cpp -text
+indi/drivers/telescope/lx200ap.h -text
+indi/drivers/telescope/lx200apdriver.c -text
+indi/drivers/telescope/lx200apdriver.h -text
+indi/drivers/telescope/lx200aplib.h -text
+indi/drivers/telescope/lx200autostar.cpp -text
+indi/drivers/telescope/lx200autostar.h -text
+indi/drivers/telescope/lx200basic.cpp -text
+indi/drivers/telescope/lx200basic.h -text
+indi/drivers/telescope/lx200classic.cpp -text
+indi/drivers/telescope/lx200classic.h -text
+indi/drivers/telescope/lx200driver.c -text
+indi/drivers/telescope/lx200driver.h -text
+indi/drivers/telescope/lx200generic.cpp -text
+indi/drivers/telescope/lx200generic.h -text
+indi/drivers/telescope/lx200gps.cpp -text
+indi/drivers/telescope/lx200gps.h -text
+indi/drivers/telescope/orionatlas.cpp -text
+indi/drivers/telescope/orionatlas.h -text
+indi/drivers/telescope/skycommander.c -text
+indi/drivers/telescope/temmadriver.c -text
+indi/drivers/telescope/temmadriver.h -text
+indi/drivers/video/indi_lpi.cpp -text
+indi/drivers/video/indi_philips.cpp -text
+indi/drivers/video/indi_v4l.cpp -text
+indi/drivers/video/stv.c -text
+indi/drivers/video/stvdriver.c -text
+indi/drivers/video/stvdriver.h -text
+indi/drivers/video/v4ldriver.cpp -text
+indi/drivers/video/v4ldriver.h -text
+indi/drivers/video/v4lphilips.cpp -text
+indi/drivers/video/v4lphilips.h -text
+indi/libs/indicom.c -text
+indi/libs/indicom.h -text
+indi/libs/lilxml.c -text
+indi/libs/lilxml.h -text
+indi/libs/webcam/PPort.cpp -text
+indi/libs/webcam/PPort.h -text
+indi/libs/webcam/ccvt.h -text
+indi/libs/webcam/ccvt_c2.c -text
+indi/libs/webcam/ccvt_misc.c -text
+indi/libs/webcam/ccvt_types.h -text
+indi/libs/webcam/port.cpp -text
+indi/libs/webcam/port.h -text
+indi/libs/webcam/pwc-ioctl.h -text
+indi/libs/webcam/v4l1_base.cpp -text
+indi/libs/webcam/v4l1_base.h -text
+indi/libs/webcam/v4l1_pwc.cpp -text
+indi/libs/webcam/v4l1_pwc.h -text
+indi/libs/webcam/v4l2_base.cpp -text
+indi/libs/webcam/v4l2_base.h -text
+indi/libs/webcam/vcvt.h -text
+indi/libs/webcam/videodev.h -text
+indi/libs/webcam/videodev2.h -text
+indi/tools/compiler.c -text
+indi/tools/evalINDI.c -text
+indi/tools/getINDIproperty.c -text
+indi/tools/setINDIproperty.c -text
