Importing trunk INDI

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,13 +2,20 @@
 indi/.cproject -text
 indi/.project -text
 indi/AUTHORS -text
+indi/CMakeLists.txt -text
+indi/COPYING.LIB -text
 indi/ChangeLog -text
 indi/Doxyfile -text
 indi/INSTALL -text
 indi/LICENSE -text
 indi/NEWS -text
 indi/README -text
+indi/README.drivers -text
+indi/README.robofocus -text
+indi/README.stv -text
 indi/TODO -text
+indi/base64.c -text
+indi/base64.h -text
 indi/cmake_modules/FindCFitsio.cmake -text
 indi/cmake_modules/FindFLI.cmake -text
 indi/cmake_modules/FindNova.cmake -text
@@ -16,6 +23,8 @@ indi/cmake_modules/FindUSB.cmake -text
 indi/cmake_modules/MacroBoolTo01.cmake -text
 indi/cmake_modules/MacroLogFeature.cmake -text
 indi/cmake_modules/MacroOptionalFindPackage.cmake -text
+indi/config.h.cmake -text
+indi/drivers.xml -text
 indi/drivers/ccd/fli_ccd.c -text
 indi/drivers/filter_wheel/fli_wheel.c -text
 indi/drivers/filter_wheel/trutech_wheel.c -text
@@ -62,6 +71,14 @@ indi/drivers/video/v4ldriver.cpp -text
 indi/drivers/video/v4ldriver.h -text
 indi/drivers/video/v4lphilips.cpp -text
 indi/drivers/video/v4lphilips.h -text
+indi/eventloop.c -text
+indi/eventloop.h -text
+indi/fq.c -text
+indi/fq.h -text
+indi/indiapi.h -text
+indi/indidevapi.h -text
+indi/indidrivermain.c -text
+indi/indiserver.c -text
 indi/libs/indicom.c -text
 indi/libs/indicom.h -text
 indi/libs/lilxml.c -text
