--- a/.gitattributes
+++ b/.gitattributes
@@ -105,3 +105,23 @@ indi/tools/compiler.c -text
 indi/tools/evalINDI.c -text
 indi/tools/getINDIproperty.c -text
 indi/tools/setINDIproperty.c -text
+indi_sbig/.cproject -text
+indi_sbig/.project -text
+indi_sbig/AUTHORS -text
+indi_sbig/CMakeLists.txt -text
+indi_sbig/COPYING.LIB -text
+indi_sbig/ChangeLog -text
+indi_sbig/INSTALL -text
+indi_sbig/README -text
+indi_sbig/cmake_modules/FindCFitsio.cmake -text
+indi_sbig/cmake_modules/FindINDI.cmake -text
+indi_sbig/cmake_modules/FindNova.cmake -text
+indi_sbig/cmake_modules/FindSBIG.cmake -text
+indi_sbig/cmake_modules/FindUSB.cmake -text
+indi_sbig/cmake_modules/MacroBoolTo01.cmake -text
+indi_sbig/cmake_modules/MacroLogFeature.cmake -text
+indi_sbig/cmake_modules/MacroOptionalFindPackage.cmake -text
+indi_sbig/config.h.cmake -text
+indi_sbig/sbigcam.cpp -text
+indi_sbig/sbigcam.h -text
+indi_sbig/sbigudrv.h -text
