--- a/.gitattributes
+++ b/.gitattributes
@@ -105,6 +105,23 @@ indi/tools/compiler.c -text
 indi/tools/evalINDI.c -text
 indi/tools/getINDIproperty.c -text
 indi/tools/setINDIproperty.c -text
+indi_apogee/.cproject -text
+indi_apogee/.project -text
+indi_apogee/AUTHORS -text
+indi_apogee/CMakeLists.txt -text
+indi_apogee/COPYING.LIB -text
+indi_apogee/ChangeLog -text
+indi_apogee/INSTALL -text
+indi_apogee/README -text
+indi_apogee/cmake_modules/FindAPOGEE.cmake -text
+indi_apogee/cmake_modules/FindCFitsio.cmake -text
+indi_apogee/cmake_modules/FindINDI.cmake -text
+indi_apogee/cmake_modules/FindNova.cmake -text
+indi_apogee/cmake_modules/FindUSB.cmake -text
+indi_apogee/cmake_modules/MacroBoolTo01.cmake -text
+indi_apogee/cmake_modules/MacroLogFeature.cmake -text
+indi_apogee/cmake_modules/MacroOptionalFindPackage.cmake -text
+indi_apogee/indialta.c -text
 indi_sbig/.cproject -text
 indi_sbig/.project -text
 indi_sbig/AUTHORS -text
