--- a/.gitattributes
+++ b/.gitattributes
@@ -360,3 +360,43 @@ libapogee/test_alta.cpp -text
 libapogee/test_apogee.cpp -text
 libapogee/test_hatalta.cpp -text
 libapogee/testnet.cpp -text
+libfli/.cproject -text
+libfli/.project -text
+libfli/CMakeLists.txt -text
+libfli/LICENSE.BSD -text
+libfli/debian/changelog -text
+libfli/debian/compat -text
+libfli/debian/control -text
+libfli/debian/copyright -text
+libfli/debian/libfli-dev.install -text
+libfli/debian/libfli.install -text
+libfli/debian/postinst.ex -text
+libfli/debian/postrm.ex -text
+libfli/debian/rules -text
+libfli/fli_ioctl.h -text
+libfli/fliusb_ioctl.h -text
+libfli/libfli-camera-parport.c -text
+libfli/libfli-camera-parport.h -text
+libfli/libfli-camera-usb.c -text
+libfli/libfli-camera-usb.h -text
+libfli/libfli-camera.c -text
+libfli/libfli-camera.h -text
+libfli/libfli-debug.c -text
+libfli/libfli-debug.h -text
+libfli/libfli-filter-focuser.c -text
+libfli/libfli-filter-focuser.h -text
+libfli/libfli-libfli.h -text
+libfli/libfli-mem.c -text
+libfli/libfli-mem.h -text
+libfli/libfli-parport.c -text
+libfli/libfli-parport.h -text
+libfli/libfli-serial.c -text
+libfli/libfli-serial.h -text
+libfli/libfli-sys.c -text
+libfli/libfli-sys.h -text
+libfli/libfli-usb-sys.c -text
+libfli/libfli-usb.c -text
+libfli/libfli-usb.h -text
+libfli/libfli.c -text
+libfli/libfli.dxx -text
+libfli/libfli.h -text
