Adding debian directory

--- a/.gitattributes
+++ b/.gitattributes
@@ -351,6 +351,15 @@ libapogee/cmake_modules/FindUSB.cmake -text
 libapogee/cmake_modules/MacroBoolTo01.cmake -text
 libapogee/cmake_modules/MacroLogFeature.cmake -text
 libapogee/cmake_modules/MacroOptionalFindPackage.cmake -text
+libapogee/debian/changelog -text
+libapogee/debian/compat -text
+libapogee/debian/control -text
+libapogee/debian/copyright -text
+libapogee/debian/libapogee1-dev.install -text
+libapogee/debian/libapogee1.install -text
+libapogee/debian/postinst.ex -text
+libapogee/debian/postrm.ex -text
+libapogee/debian/rules -text
 libapogee/libapogee.cpp -text
 libapogee/libapogee.h -text
 libapogee/stdafx.h -text
