--- a/.gitattributes
+++ b/.gitattributes
@@ -417,3 +417,19 @@ libfli/libfli-usb.h -text
 libfli/libfli.c -text
 libfli/libfli.dxx -text
 libfli/libfli.h -text
+sbig/10-sbig.rules -text
+sbig/INSTALLED_FILES -text
+sbig/debian/changelog -text
+sbig/debian/compat -text
+sbig/debian/control -text
+sbig/debian/copyright -text
+sbig/debian/postinst.ex -text
+sbig/debian/postrm.ex -text
+sbig/debian/rules -text
+sbig/sbig_install_drivers.py -text
+sbig/sbig_load.sh -text
+sbig/sbig_perm.sh -text
+sbig/sbigfcam.hex -text
+sbig/sbiglcam.hex -text
+sbig/sbigucam.hex -text
+sbig/stfga.bin -text
