--- a/.gitattributes
+++ b/.gitattributes
@@ -133,6 +133,14 @@ indi_apogee/cmake_modules/FindUSB.cmake -text
 indi_apogee/cmake_modules/MacroBoolTo01.cmake -text
 indi_apogee/cmake_modules/MacroLogFeature.cmake -text
 indi_apogee/cmake_modules/MacroOptionalFindPackage.cmake -text
+indi_apogee/debian/changelog -text
+indi_apogee/debian/compat -text
+indi_apogee/debian/control -text
+indi_apogee/debian/copyright -text
+indi_apogee/debian/postinst.ex -text
+indi_apogee/debian/postrm.ex -text
+indi_apogee/debian/rules -text
+indi_apogee/indi_apogeeu.xml -text
 indi_apogee/indialta.c -text
 indi_sbig/.cproject -text
 indi_sbig/.project -text
@@ -142,10 +150,10 @@ indi_sbig/COPYING.LIB -text
 indi_sbig/ChangeLog -text
 indi_sbig/INSTALL -text
 indi_sbig/README -text
+indi_sbig/cmake_modules/FindAPOGEE.cmake -text
 indi_sbig/cmake_modules/FindCFITSIO.cmake -text
 indi_sbig/cmake_modules/FindINDI.cmake -text
 indi_sbig/cmake_modules/FindNova.cmake -text
-indi_sbig/cmake_modules/FindSBIG.cmake -text
 indi_sbig/cmake_modules/FindUSB.cmake -text
 indi_sbig/cmake_modules/MacroBoolTo01.cmake -text
 indi_sbig/cmake_modules/MacroLogFeature.cmake -text
