--- a/.gitattributes
+++ b/.gitattributes
@@ -565,6 +565,12 @@ libfli/debian/changelog -text
 libfli/debian/compat -text
 libfli/debian/control -text
 libfli/debian/copyright -text
+libfli/debian/libfli1-dev.dirs -text
+libfli/debian/libfli1-dev.install -text
+libfli/debian/libfli1-dev.links -text
+libfli/debian/libfli1.dirs -text
+libfli/debian/libfli1.install -text
+libfli/debian/libfli1.links -text
 libfli/debian/postinst.ex -text
 libfli/debian/postrm.ex -text
 libfli/debian/rules -text
