--- a/.gitattributes
+++ b/.gitattributes
@@ -601,6 +601,103 @@ libfli/libfli-usb.h -text
 libfli/libfli.c -text
 libfli/libfli.dxx -text
 libfli/libfli.h -text
+libnova/.cproject -text
+libnova/.project -text
+libnova/AUTHORS -text
+libnova/CMakeLists.txt -text
+libnova/COPYING -text
+libnova/ChangeLog -text
+libnova/INSTALL -text
+libnova/Makefile.am -text
+libnova/NEWS -text
+libnova/README -text
+libnova/aberration.c -text
+libnova/airmass.c -text
+libnova/angular_separation.c -text
+libnova/apparent_position.c -text
+libnova/asteroid.c -text
+libnova/cmake_modules/FindAPOGEE.cmake -text
+libnova/cmake_modules/FindCFitsio.cmake -text
+libnova/cmake_modules/FindINDI.cmake -text
+libnova/cmake_modules/FindNova.cmake -text
+libnova/cmake_modules/FindUSB.cmake -text
+libnova/cmake_modules/MacroBoolTo01.cmake -text
+libnova/cmake_modules/MacroLogFeature.cmake -text
+libnova/cmake_modules/MacroOptionalFindPackage.cmake -text
+libnova/comet.c -text
+libnova/debian/changelog -text
+libnova/debian/compat -text
+libnova/debian/control -text
+libnova/debian/copyright -text
+libnova/debian/libnova0-dev.dirs -text
+libnova/debian/libnova0-dev.install -text
+libnova/debian/libnova0-dev.links -text
+libnova/debian/libnova0.dirs -text
+libnova/debian/libnova0.install -text
+libnova/debian/libnova0.links -text
+libnova/debian/postinst.ex -text
+libnova/debian/postrm.ex -text
+libnova/debian/rules -text
+libnova/dynamical_time.c -text
+libnova/earth.c -text
+libnova/elliptic_motion.c -text
+libnova/hyperbolic_motion.c -text
+libnova/julian_day.c -text
+libnova/jupiter.c -text
+libnova/libnova/aberration.h -text
+libnova/libnova/airmass.h -text
+libnova/libnova/angular_separation.h -text
+libnova/libnova/apparent_position.h -text
+libnova/libnova/asteroid.h -text
+libnova/libnova/comet.h -text
+libnova/libnova/dynamical_time.h -text
+libnova/libnova/earth.h -text
+libnova/libnova/elliptic_motion.h -text
+libnova/libnova/hyperbolic_motion.h -text
+libnova/libnova/julian_day.h -text
+libnova/libnova/jupiter.h -text
+libnova/libnova/libnova.h -text
+libnova/libnova/ln_types.h -text
+libnova/libnova/lunar.h -text
+libnova/libnova/mars.h -text
+libnova/libnova/mercury.h -text
+libnova/libnova/neptune.h -text
+libnova/libnova/nutation.h -text
+libnova/libnova/parabolic_motion.h -text
+libnova/libnova/parallax.h -text
+libnova/libnova/pluto.h -text
+libnova/libnova/precession.h -text
+libnova/libnova/proper_motion.h -text
+libnova/libnova/refraction.h -text
+libnova/libnova/rise_set.h -text
+libnova/libnova/saturn.h -text
+libnova/libnova/sidereal_time.h -text
+libnova/libnova/solar.h -text
+libnova/libnova/transform.h -text
+libnova/libnova/uranus.h -text
+libnova/libnova/utility.h -text
+libnova/libnova/venus.h -text
+libnova/libnova/vsop87.h -text
+libnova/lunar.c -text
+libnova/mars.c -text
+libnova/mercury.c -text
+libnova/neptune.c -text
+libnova/nutation.c -text
+libnova/parabolic_motion.c -text
+libnova/parallax.c -text
+libnova/pluto.c -text
+libnova/precession.c -text
+libnova/proper_motion.c -text
+libnova/refraction.c -text
+libnova/rise_set.c -text
+libnova/saturn.c -text
+libnova/sidereal_time.c -text
+libnova/solar.c -text
+libnova/transform.c -text
+libnova/uranus.c -text
+libnova/utility.c -text
+libnova/venus.c -text
+libnova/vsop87.c -text
 sbig/10-sbig.rules -text
 sbig/INSTALLED_FILES -text
 sbig/debian/changelog -text
