Renaming to indi-sbig which is the official release name

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,34 @@
 * text=auto !eol
+indi-sbig/.cproject -text
+indi-sbig/.project -text
+indi-sbig/AUTHORS -text
+indi-sbig/CMakeLists.txt -text
+indi-sbig/COPYING.LIB -text
+indi-sbig/ChangeLog -text
+indi-sbig/INSTALL -text
+indi-sbig/README -text
+indi-sbig/cmake_modules/FindAPOGEE.cmake -text
+indi-sbig/cmake_modules/FindCFITSIO.cmake -text
+indi-sbig/cmake_modules/FindINDI.cmake -text
+indi-sbig/cmake_modules/FindNova.cmake -text
+indi-sbig/cmake_modules/FindUSB.cmake -text
+indi-sbig/cmake_modules/MacroBoolTo01.cmake -text
+indi-sbig/cmake_modules/MacroLogFeature.cmake -text
+indi-sbig/cmake_modules/MacroOptionalFindPackage.cmake -text
+indi-sbig/config.h.cmake -text
+indi-sbig/debian/changelog -text
+indi-sbig/debian/compat -text
+indi-sbig/debian/control -text
+indi-sbig/debian/copyright -text
+indi-sbig/debian/indi-sbig.dirs -text
+indi-sbig/debian/indi-sbig.install -text
+indi-sbig/debian/postinst.ex -text
+indi-sbig/debian/postrm.ex -text
+indi-sbig/debian/rules -text
+indi-sbig/indi_sbig.xml -text
+indi-sbig/sbigcam.cpp -text
+indi-sbig/sbigcam.h -text
+indi-sbig/sbigudrv.h -text
 indi_apogee/.cproject -text
 indi_apogee/.project -text
 indi_apogee/AUTHORS -text
@@ -24,36 +54,6 @@ indi_apogee/debian/postrm.ex -text
 indi_apogee/debian/rules -text
 indi_apogee/indi_apogeeu.xml -text
 indi_apogee/indialta.c -text
-indi_sbig/.cproject -text
-indi_sbig/.project -text
-indi_sbig/AUTHORS -text
-indi_sbig/CMakeLists.txt -text
-indi_sbig/COPYING.LIB -text
-indi_sbig/ChangeLog -text
-indi_sbig/INSTALL -text
-indi_sbig/README -text
-indi_sbig/cmake_modules/FindAPOGEE.cmake -text
-indi_sbig/cmake_modules/FindCFITSIO.cmake -text
-indi_sbig/cmake_modules/FindINDI.cmake -text
-indi_sbig/cmake_modules/FindNova.cmake -text
-indi_sbig/cmake_modules/FindUSB.cmake -text
-indi_sbig/cmake_modules/MacroBoolTo01.cmake -text
-indi_sbig/cmake_modules/MacroLogFeature.cmake -text
-indi_sbig/cmake_modules/MacroOptionalFindPackage.cmake -text
-indi_sbig/config.h.cmake -text
-indi_sbig/debian/changelog -text
-indi_sbig/debian/compat -text
-indi_sbig/debian/control -text
-indi_sbig/debian/copyright -text
-indi_sbig/debian/indi-sbig.dirs -text
-indi_sbig/debian/indi-sbig.install -text
-indi_sbig/debian/postinst.ex -text
-indi_sbig/debian/postrm.ex -text
-indi_sbig/debian/rules -text
-indi_sbig/indi_sbig.xml -text
-indi_sbig/sbigcam.cpp -text
-indi_sbig/sbigcam.h -text
-indi_sbig/sbigudrv.h -text
 libapogee/.cproject -text
 libapogee/.project -text
 libapogee/AUTHORS -text
