--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,29 @@
 * text=auto !eol
+indi-apogee/.cproject -text
+indi-apogee/.project -text
+indi-apogee/AUTHORS -text
+indi-apogee/CMakeLists.txt -text
+indi-apogee/COPYING.LIB -text
+indi-apogee/ChangeLog -text
+indi-apogee/INSTALL -text
+indi-apogee/README -text
+indi-apogee/cmake_modules/FindAPOGEE.cmake -text
+indi-apogee/cmake_modules/FindCFITSIO.cmake -text
+indi-apogee/cmake_modules/FindINDI.cmake -text
+indi-apogee/cmake_modules/FindNova.cmake -text
+indi-apogee/cmake_modules/FindUSB.cmake -text
+indi-apogee/cmake_modules/MacroBoolTo01.cmake -text
+indi-apogee/cmake_modules/MacroLogFeature.cmake -text
+indi-apogee/cmake_modules/MacroOptionalFindPackage.cmake -text
+indi-apogee/debian/changelog -text
+indi-apogee/debian/compat -text
+indi-apogee/debian/control -text
+indi-apogee/debian/copyright -text
+indi-apogee/debian/postinst.ex -text
+indi-apogee/debian/postrm.ex -text
+indi-apogee/debian/rules -text
+indi-apogee/indi_apogeeu.xml -text
+indi-apogee/indialta.c -text
 indi-sbig/.cproject -text
 indi-sbig/.project -text
 indi-sbig/AUTHORS -text
@@ -29,31 +54,6 @@ indi-sbig/indi_sbig.xml -text
 indi-sbig/sbigcam.cpp -text
 indi-sbig/sbigcam.h -text
 indi-sbig/sbigudrv.h -text
-indi_apogee/.cproject -text
-indi_apogee/.project -text
-indi_apogee/AUTHORS -text
-indi_apogee/CMakeLists.txt -text
-indi_apogee/COPYING.LIB -text
-indi_apogee/ChangeLog -text
-indi_apogee/INSTALL -text
-indi_apogee/README -text
-indi_apogee/cmake_modules/FindAPOGEE.cmake -text
-indi_apogee/cmake_modules/FindCFITSIO.cmake -text
-indi_apogee/cmake_modules/FindINDI.cmake -text
-indi_apogee/cmake_modules/FindNova.cmake -text
-indi_apogee/cmake_modules/FindUSB.cmake -text
-indi_apogee/cmake_modules/MacroBoolTo01.cmake -text
-indi_apogee/cmake_modules/MacroLogFeature.cmake -text
-indi_apogee/cmake_modules/MacroOptionalFindPackage.cmake -text
-indi_apogee/debian/changelog -text
-indi_apogee/debian/compat -text
-indi_apogee/debian/control -text
-indi_apogee/debian/copyright -text
-indi_apogee/debian/postinst.ex -text
-indi_apogee/debian/postrm.ex -text
-indi_apogee/debian/rules -text
-indi_apogee/indi_apogeeu.xml -text
-indi_apogee/indialta.c -text
 libapogee/.cproject -text
 libapogee/.project -text
 libapogee/AUTHORS -text
