First commit of the QSI CCD INDI driver

--- a/.gitattributes
+++ b/.gitattributes
@@ -26,6 +26,21 @@ indi-apogee/debian/postrm.ex -text
 indi-apogee/debian/rules -text
 indi-apogee/indi_apogee.xml -text
 indi-apogee/indialta.c -text
+indi-qsi/AUTHORS -text
+indi-qsi/INSTALL -text
+indi-qsi/README -text
+indi-qsi/cmake_modules/FindCFITSIO.cmake -text
+indi-qsi/cmake_modules/FindINDI.cmake -text
+indi-qsi/cmake_modules/FindNova.cmake -text
+indi-qsi/cmake_modules/FindQSIAPI.cmake -text
+indi-qsi/cmake_modules/FindUSB.cmake -text
+indi-qsi/cmake_modules/MacroBoolTo01.cmake -text
+indi-qsi/cmake_modules/MacroLogFeature.cmake -text
+indi-qsi/cmake_modules/MacroOptionalFindPackage.cmake -text
+indi-qsi/config.h.cmake -text
+indi-qsi/drivers.xml -text
+indi-qsi/indi_qsi.xml -text
+indi-qsi/qsi_ccd.cc -text
 indi-sbig/.cproject -text
 indi-sbig/.project -text
 indi-sbig/AUTHORS -text
