--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,9 @@
 * text=auto !eol
+cmake_modules/FindAPOGEE.cmake -text
 cmake_modules/FindCFITSIO.cmake -text
 cmake_modules/FindFLI.cmake -text
 cmake_modules/FindNova.cmake -text
+cmake_modules/FindQSIAPI.cmake -text
 cmake_modules/FindUSB.cmake -text
 cmake_modules/MacroBoolTo01.cmake -text
 cmake_modules/MacroLogFeature.cmake -text
