--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@ cmake_modules/FindAPOGEE.cmake -text
 cmake_modules/FindCFITSIO.cmake -text
 cmake_modules/FindFLI.cmake -text
 cmake_modules/FindINDI.cmake -text
+cmake_modules/FindMODBUS.cmake -text
 cmake_modules/FindNova.cmake -text
 cmake_modules/FindQSIAPI.cmake -text
 cmake_modules/FindSBIG.cmake -text
