Use a standard FindXXX convention

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,7 +6,7 @@ cmake_modules/FindFLI.cmake -text
 cmake_modules/FindINDI.cmake -text
 cmake_modules/FindMODBUS.cmake -text
 cmake_modules/FindNova.cmake -text
-cmake_modules/FindQSIAPI.cmake -text
+cmake_modules/FindQSI.cmake -text
 cmake_modules/FindSBIG.cmake -text
 cmake_modules/FindUSB.cmake -text
 cmake_modules/FindVorbis.cmake -text
