initial import of qhy driver

--- a/.gitattributes
+++ b/.gitattributes
@@ -32,6 +32,35 @@ indi-apogee/debian/postrm.ex -text
 indi-apogee/debian/rules -text
 indi-apogee/indi_apogee.xml -text
 indi-apogee/indialta.c -text
+indi-qhy/AUTHORS -text
+indi-qhy/CMakeLists.txt -text
+indi-qhy/COPYING.LIB -text
+indi-qhy/INSTALL -text
+indi-qhy/Makefile -text
+indi-qhy/README -text
+indi-qhy/cmake_install.cmake -text
+indi-qhy/cmake_modules/FindALUT.cmake -text
+indi-qhy/cmake_modules/FindAPOGEE.cmake -text
+indi-qhy/cmake_modules/FindCFITSIO.cmake -text
+indi-qhy/cmake_modules/FindFLI.cmake -text
+indi-qhy/cmake_modules/FindINDI.cmake -text
+indi-qhy/cmake_modules/FindMODBUS.cmake -text
+indi-qhy/cmake_modules/FindNova.cmake -text
+indi-qhy/cmake_modules/FindQSI.cmake -text
+indi-qhy/cmake_modules/FindSBIG.cmake -text
+indi-qhy/cmake_modules/FindUSB.cmake -text
+indi-qhy/cmake_modules/FindVorbis.cmake -text
+indi-qhy/cmake_modules/MacroBoolTo01.cmake -text
+indi-qhy/cmake_modules/MacroLogFeature.cmake -text
+indi-qhy/cmake_modules/MacroOptionalFindPackage.cmake -text
+indi-qhy/firmware/85-qhy.rules -text
+indi-qhy/firmware/LICENSE -text
+indi-qhy/firmware/README -text
+indi-qhy/firmware/qhy5.hex -text
+indi-qhy/firmware/qhy5loader.hex -text
+indi-qhy/qhy5_driver.c -text
+indi-qhy/qhy5_driver.h -text
+indi-qhy/qhy_ccd.c -text
 indi-qsi/AUTHORS -text
 indi-qsi/INSTALL -text
 indi-qsi/README -text
