Add debian build scripts for indi-gphoto and indi-qhy

--- a/.gitattributes
+++ b/.gitattributes
@@ -38,6 +38,13 @@ indi-gphoto/CMakeLists.txt -text
 indi-gphoto/COPYING.LIB -text
 indi-gphoto/INSTALL -text
 indi-gphoto/README -text
+indi-gphoto/debian/changelog -text
+indi-gphoto/debian/compat -text
+indi-gphoto/debian/control -text
+indi-gphoto/debian/copyright -text
+indi-gphoto/debian/dirs -text
+indi-gphoto/debian/install -text
+indi-gphoto/debian/rules -text
 indi-gphoto/gphoto_ccd.c -text
 indi-gphoto/gphoto_driver.c -text
 indi-gphoto/gphoto_driver.h -text
@@ -49,6 +56,16 @@ indi-qhy/CMakeLists.txt -text
 indi-qhy/COPYING.LIB -text
 indi-qhy/INSTALL -text
 indi-qhy/README -text
+indi-qhy/debian/changelog -text
+indi-qhy/debian/compat -text
+indi-qhy/debian/control -text
+indi-qhy/debian/indi-qhy.copyright -text
+indi-qhy/debian/indi-qhy.dirs -text
+indi-qhy/debian/indi-qhy.install -text
+indi-qhy/debian/qhy-firmware.copyright -text
+indi-qhy/debian/qhy-firmware.dirs -text
+indi-qhy/debian/qhy-firmware.install -text
+indi-qhy/debian/rules -text
 indi-qhy/firmware/85-qhy.rules -text
 indi-qhy/firmware/LICENSE -text
 indi-qhy/firmware/README -text
