Big commit to sync with working copy. Adding a preliminary spectrometer class. Inverter class is working fine and quite mature. Still facing hardware issues with RS485 to USB converter for the encoder class. It might be a problem with Ubuntu since the node ttyUSB0 disconnects after we try to connect to it sometimes. Problems traced to rouge brltty driver, but even after removing it, the problem persists.

--- a/indi-knro/CMakeLists.txt
+++ b/indi-knro/CMakeLists.txt
@@ -51,6 +51,7 @@ set(indiknro_SRCS
    ${CMAKE_SOURCE_DIR}/knro.cpp
    ${CMAKE_SOURCE_DIR}/encoder.cpp
    ${CMAKE_SOURCE_DIR}/inverter.cpp
+   ${CMAKE_SOURCE_DIR}/spectrometer.cpp
    ${CMAKE_SOURCE_DIR}/polling.cpp
    ${CMAKE_SOURCE_DIR}/ogg_util.cpp
    )
