Adding sounds for complete slew, busy, and alerts. The inverter is more error-tolerant now and it attempts to issue commands several times before it gives us completely

--- a/.gitattributes
+++ b/.gitattributes
@@ -20,4 +20,6 @@ indi-knro/polling.cpp -text
 indi-knro/sounds/alarm1.ogg -text
 indi-knro/sounds/alarm2.ogg -text
 indi-knro/sounds/calibration_error.ogg -text
+indi-knro/sounds/slew_busy.ogg -text
+indi-knro/sounds/slew_complete.ogg -text
 indi-knro/sounds/slew_error.ogg -text
