--- a/indi-knro/CMakeLists.txt
+++ b/indi-knro/CMakeLists.txt
@@ -72,3 +72,5 @@ install(FILES sounds/alarm1.ogg DESTINATION ${DATA_INSTALL_DIR})
 install(FILES sounds/alarm2.ogg DESTINATION ${DATA_INSTALL_DIR})
 install(FILES sounds/calibration_error.ogg DESTINATION ${DATA_INSTALL_DIR})
 install(FILES sounds/slew_error.ogg DESTINATION ${DATA_INSTALL_DIR})
+install(FILES sounds/slew_complete.ogg DESTINATION ${DATA_INSTALL_DIR})
+install(FILES sounds/slew_busy.ogg DESTINATION ${DATA_INSTALL_DIR})
