--- a/.gitattributes
+++ b/.gitattributes
@@ -46,7 +46,8 @@ indi-gphoto/debian/copyright -text
 indi-gphoto/debian/dirs -text
 indi-gphoto/debian/install -text
 indi-gphoto/debian/rules -text
-indi-gphoto/gphoto_ccd.c -text
+indi-gphoto/gphoto_ccd.cpp -text
+indi-gphoto/gphoto_ccd.h -text
 indi-gphoto/gphoto_driver.c -text
 indi-gphoto/gphoto_driver.h -text
 indi-gphoto/gphoto_readimage.c -text
