--- a/.gitattributes
+++ b/.gitattributes
@@ -642,6 +642,9 @@ libindi/examples/ccdpreview.txt -text
 libindi/examples/ngc1316o.fits -text
 libindi/examples/tutorial_ccdpreview.c -text
 libindi/examples/tutorial_dome.c -text
+libindi/examples/tutorial_four.cpp -text
+libindi/examples/tutorial_four.h -text
+libindi/examples/tutorial_four_sk.xml -text
 libindi/examples/tutorial_one.c -text
 libindi/examples/tutorial_rain.c -text
 libindi/examples/tutorial_three.c -text
@@ -651,8 +654,11 @@ libindi/fq.h -text
 libindi/indiapi.h -text
 libindi/indidevapi.h -text
 libindi/indidrivermain.c -text
+libindi/indidrivermain.h -text
 libindi/indiserver.c -text
 libindi/libindi.pc.cmake -text
+libindi/libs/indibasedevice.cpp -text
+libindi/libs/indibasedevice.h -text
 libindi/libs/indicom.c -text
 libindi/libs/indicom.h -text
 libindi/libs/lilxml.c -text
