--- a/.gitattributes
+++ b/.gitattributes
@@ -480,6 +480,8 @@ libindi/indidrivermain.c -text
 libindi/indidrivermain.h -text
 libindi/indiserver.c -text
 libindi/libindi.pc.cmake -text
+libindi/libs/indibaseclient.cpp -text
+libindi/libs/indibaseclient.h -text
 libindi/libs/indibasedevice.cpp -text
 libindi/libs/indibasedevice.h -text
 libindi/libs/indicom.c -text
